--- a/alphatest01.html
+++ b/alphatest01.html
@@ -60,7 +60,7 @@
     #ground {
       position: absolute;
       left: 0;
-      background: #0d0c29;
+      background: #0d0c29; background: url('overlay1.png') repeat !important;
     }
     /* Controls – auto-sized below ground line */
     #controls {
