--- a/alphatest01.html
+++ b/alphatest01.html
@@ -310,7 +310,7 @@
       box-shadow: 0 0 20px 10px rgba(255,255,200,0.9);
     }
     .goal-wall {
-      background: #0d0c29;
+      background: #00FFFFFF;
     }
     
     /* --- NEW: Player-Specific Overrides (CSS Only) --- */
