--- a/alphatest01.html
+++ b/alphatest01.html
@@ -60,7 +60,7 @@
     #ground {
       position: absolute;
       left: 0;
-      background: #0d0c29; background: url('overlay2.png') repeat !important;border-top: 4px dotted yellow;
+      background: #0d0c29; background: url('overlay2.png') repeat !important;border-top: 25px double navy;
     }
     /* Controls – auto-sized below ground line */
     #controls {
